fix(recipes): add zeebe:userTask hint to claim and setAssignee migrations
claim and setAssignee migrate to newAssignUserTaskCommand, which - like
complete - is a Camunda user task API command that returns 404 unless the
BPMN element declares <zeebe:userTask />. Attach the same prerequisite
hint so every write command carries consistent guidance.

related to #1556

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>